--- a/env.yaml
+++ b/env.yaml
@@ -3,6 +3,7 @@ channels:
   - defaults
 dependencies:
   - altair=5.0.1=py310haa95532_0
+  - annotated-types=0.6.0=py310haa95532_0
   - anyio=4.2.0=py310haa95532_0
   - argon2-cffi=21.3.0=pyhd3eb1b0_0
   - argon2-cffi-bindings=21.2.0=py310h2bbff1b_0
@@ -35,12 +36,17 @@ dependencies:
   - c-ares=1.19.1=h2bbff1b_0
   - ca-certificates=2024.7.2=haa95532_0
   - cachetools=5.3.3=py310haa95532_0
+  - catalogue=2.0.10=py310haa95532_0
   - certifi=2024.8.30=py310haa95532_0
   - cffi=1.16.0=py310h2bbff1b_1
   - charset-normalizer=3.3.2=pyhd3eb1b0_0
   - click=8.1.7=py310haa95532_0
+  - cloudpathlib=0.16.0=py310haa95532_1
   - colorama=0.4.6=py310haa95532_0
   - comm=0.2.1=py310haa95532_0
+  - confection=0.1.4=py310h9909e9c_0
+  - cymem=2.0.6=py310hd77b12b_0
+  - cython-blis=0.7.9=py310h9128911_0
   - debugpy=1.6.7=py310hd77b12b_0
   - decorator=5.1.1=pyhd3eb1b0_0
   - defusedxml=0.7.1=pyhd3eb1b0_0
@@ -79,6 +85,7 @@ dependencies:
   - jupyterlab_pygments=0.1.2=py_0
   - jupyterlab_server=2.27.3=py310haa95532_0
   - jupyterlab_widgets=1.0.0=pyhd3eb1b0_1
+  - langcodes=3.3.0=pyhd3eb1b0_0
   - lcms2=2.12=h83e58a3_0
   - lerc=3.0=hd77b12b_0
   - libabseil=20240116.2=cxx17_h5da7b33_0
@@ -108,6 +115,7 @@ dependencies:
   - mkl-service=2.4.0=py310h2bbff1b_1
   - mkl_fft=1.3.10=py310h827c3e9_0
   - mkl_random=1.2.7=py310hc64d2fc_0
+  - murmurhash=1.0.7=py310hd77b12b_0
   - nbclient=0.8.0=py310haa95532_0
   - nbconvert=7.10.0=py310haa95532_0
   - nbformat=5.9.2=py310haa95532_0
@@ -128,6 +136,7 @@ dependencies:
   - pillow=10.4.0=py310h827c3e9_0
   - pip=24.2=py310haa95532_0
   - platformdirs=3.10.0=py310haa95532_0
+  - preshed=3.0.6=py310h6c2663c_0
   - prometheus_client=0.14.1=py310haa95532_0
   - prompt-toolkit=3.0.43=py310haa95532_0
   - prompt_toolkit=3.0.43=hd3eb1b0_0
@@ -137,6 +146,8 @@ dependencies:
   - pyarrow=16.1.0=py310hc64d2fc_0
   - pybind11-abi=5=hd3eb1b0_0
   - pycparser=2.21=pyhd3eb1b0_0
+  - pydantic=2.8.2=py310haa95532_0
+  - pydantic-core=2.20.1=py310hefb1915_0
   - pydeck=0.8.0=py310haa95532_2
   - pygments=2.15.1=py310haa95532_1
   - pysocks=1.7.1=py310haa95532_0
@@ -160,24 +171,33 @@ dependencies:
   - scipy=1.13.1=py310h8640f81_0
   - send2trash=1.8.2=py310haa95532_0
   - setuptools=72.1.0=py310haa95532_0
+  - shellingham=1.5.0=py310haa95532_0
   - six=1.16.0=pyhd3eb1b0_1
+  - smart_open=5.2.1=py310haa95532_0
   - smmap=4.0.0=pyhd3eb1b0_0
   - snappy=1.2.1=hcdb6601_0
   - sniffio=1.3.0=py310haa95532_0
   - soupsieve=2.5=py310haa95532_0
+  - spacy=3.7.2=py310hef0f399_0
+  - spacy-legacy=3.0.12=py310haa95532_0
+  - spacy-loggers=1.0.4=py310haa95532_0
   - sqlite=3.45.3=h2bbff1b_0
+  - srsly=2.4.8=py310hd77b12b_1
   - stack_data=0.2.0=pyhd3eb1b0_0
   - streamlit=1.37.1=py310haa95532_0
   - tbb=2021.8.0=h59b6b97_0
   - tenacity=8.2.3=py310haa95532_0
   - terminado=0.17.1=py310haa95532_0
+  - thinc=8.2.2=py310hf497b98_0
   - tinycss2=1.2.1=py310haa95532_0
   - tk=8.6.14=h0416ee5_0
   - toml=0.10.2=pyhd3eb1b0_0
   - tomli=2.0.1=py310haa95532_0
   - toolz=0.12.0=py310haa95532_0
   - tornado=6.4.1=py310h827c3e9_0
+  - tqdm=4.66.5=py310h9909e9c_0
   - traitlets=5.14.3=py310haa95532_0
+  - typer=0.9.0=py310haa95532_0
   - typing-extensions=4.11.0=py310haa95532_0
   - typing_extensions=4.11.0=py310haa95532_0
   - tzdata=2024a=h04d1e81_0
@@ -185,8 +205,10 @@ dependencies:
   - utf8proc=2.6.1=h2bbff1b_1
   - vc=14.40=h2eaa2aa_1
   - vs2015_runtime=14.40.33807=h98bb1dd_1
+  - wasabi=0.9.1=py310haa95532_0
   - watchdog=4.0.1=py310haa95532_0
   - wcwidth=0.2.5=pyhd3eb1b0_0
+  - weasel=0.3.4=py310haa95532_0
   - webencodings=0.5.1=py310haa95532_1
   - websocket-client=1.8.0=py310haa95532_0
   - werkzeug=3.0.3=py310haa95532_0
@@ -204,28 +226,36 @@ dependencies:
       - aiohttp==3.10.5
       - aiosignal==1.3.1
       - async-timeout==4.0.3
+      - cachelib==0.13.0
       - datasets==3.0.0
       - dill==0.3.8
+      - en-core-web-sm==3.7.1
       - filelock==3.16.0
+      - flask-session==0.8.0
       - flask-sqlalchemy==3.1.1
       - frozenlist==1.4.1
       - fsspec==2024.6.1
       - greenlet==3.1.0
       - huggingface-hub==0.24.7
+      - joblib==1.4.2
       - mpmath==1.3.0
+      - msgspec==0.18.6
       - multidict==6.1.0
       - multiprocess==0.70.16
       - networkx==3.2.1
+      - nltk==3.9.1
       - regex==2024.9.11
       - safetensors==0.4.5
+      - scikit-learn==1.5.2
       - sqlalchemy==2.0.35
       - sympy==1.12
+      - threadpoolctl==3.5.0
       - tokenizers==0.19.1
       - torch==2.4.1+cpu
       - torchaudio==2.4.1+cpu
       - torchvision==0.19.1+cpu
-      - tqdm==4.66.5
       - transformers==4.44.2
+      - uuid==1.30
       - xxhash==3.5.0
       - yarl==1.11.1
 prefix: C:\Users\krish\miniconda3\envs\convai_a2
